--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
                         Home
                     </a>
                 </li>
-                <li class="nav-item current">
+                <li class="nav-item">
                     <a href="about.html" class="nav-link">
                         About
                     </a>
@@ -44,7 +44,7 @@
                         How To Reach Me
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item current">
                     <a href="projects.html" class="nav-link">
                         Projects
                     </a>
@@ -56,23 +56,47 @@
     <!-- Content -->
     <main id="about">
         <h1 class="lg-heading">
-            About This
-            <span class="text-secondary">Site</span>
+            My
+            <span class="text-secondary">Projects</span>
         </h1>
         <h2 class="sm-heading">
-            Design
+            Check out some of my projects...
         </h2>
-        <div class="about-info">
-            <div class="bio"></div>
-            <h3 class="text-secondary"></h3>
-            <div class="about">
-                <p>
-                    This site was developed, designed and created by myself, Adam T Deyes. It is built on a range of different tools and programming
-                    languages such as but not limited to, HTML, JavaScript, sass, ssh, github and visual studio code.
-                    <br>
-                    <br>If you have an interest in this website or my web skills please get in contact.
-                </p>
+        <div class="projects">
+            <div class="item">
+                <a href="canvasinvader.html">
+                    <img src="img/Invader_1.png" alt="Project">
+                </a>
+                <a href="#!" class="btn-light">
+                    <i class="fas fa-eye"></i> Project
+                </a>
+                <a href="#!" class="btn-dark">
+                    <i class="fab fa-github"></i> Github
+                </a>
             </div>
+            <div class="item">
+                <a href="#!">
+                    <img src="img/IMG_20180115_205326.jpg" alt="Project">
+                </a>
+                <a href="#!" class="btn-light">
+                    <i class="fas fa-eye"></i> Project
+                </a>
+                <a href="#!" class="btn-dark">
+                    <i class="fab fa-github"></i> Github
+                </a>
+            </div>
+            <div class="item">
+                <a href="#!">
+                    <img src="img/Invader_1.png" alt="Project">
+                </a>
+                <a href="#!" class="btn-light">
+                    <i class="fas fa-eye"></i> Project
+                </a>
+                <a href="#!" class="btn-dark">
+                    <i class="fab fa-github"></i> Github
+                </a>
+            </div>
+
         </div>
     </main>
 
