--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="canvasinvader.html" class="nav-link">
-                        Canvas Invader
+                    <a href="projects.html" class="nav-link">
+                        Projects
                     </a>
                 </li>
             </ul>
@@ -63,13 +63,13 @@
             Web Developer, Programmer, Designer & CRM Admin
         </h2>
         <div class="icons">
-            <a href="#!">
+            <a href="https://twitter.com/AdamTDeyes">
                 <i class="fab fa-twitter fa-2x"></i>
             </a>
-            <a href="#!">
+            <a href="https://www.linkedin.com/in/adam-deyes/">
                 <i class="fab fa-linkedin fa-2x"></i>
             </a>
-            <a href="#!">
+            <a href="https://github.com/AdamTDeyes">
                 <i class="fab fa-github fa-2x"></i>
             </a>
         </div>
@@ -77,7 +77,7 @@
 
     <!-- Content End -->
     <footer id="main-footer">
-        Copyright &copy; 2018 Adam T Deyes
+        &copy; 2018 Adam T Deyes
         <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
     </footer>
     <script src="js/main.js"></script>
